--- a/css/styles.css
+++ b/css/styles.css
@@ -34,10 +34,13 @@ div {
 }
 
 .title {
-    font-size: 80px;
+    display: flex;
+    flex-flow: column wrap;
+    flex-shrink: 20;
+    font-size: 30px;
     text-align: center;
-    padding: 5px;
-    margin: 15px;
+    padding: 0%;
+    margin: 0%;
     color: #1f1f1f;
 }
 
@@ -70,7 +73,7 @@ div {
 
 .center-column {
     display: flex;
-    flex-direction: column;
+    flex-flow: column wrap;
     width: auto;
     height: auto;
     justify-content: center;
