--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
 
 
 body {
-    background-color: #ffe0fa;
+    background-color: #e7fbfd;
     color: #1f1f1f;
     font-family: Mada;
 }
@@ -13,8 +13,40 @@ div {
     text-align: center;
 }
 
+h1 {
+    margin-top: 10px;
+    margin-bottom: 30px;
+}
+
 h2 {
     font-size: 22px;
+}
+
+p {
+    padding-right: 10px;
+    padding-left: 10px;
+}
+
+footer {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+}
+
+.icons {
+    display: flex;
+    position: fixed;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.icons .icon:link, .icons .icon:visited {
+    color: #1f1f1f;
+    text-decoration: none;
 }
 
 .recipe-link:link, .recipe-link:visited {
@@ -31,61 +63,114 @@ h2 {
     display: flex;
     flex-flow: column wrap;
     font-size: 30px;
-    text-align: center;
     padding: 0%;
     margin: 0%;
-    color: #1f1f1f;
+}
+
+.parent {
+    display: block;
+    position: relative;
+    float: left;
+    line-height: 30px;
+    background-color: #1f1f1f;
+    font-size: 20px;
+    font-weight: bold;
+    z-index: 1;
+    padding: 5px;
+    transition: .8s ease;
+}
+
+.parent a {
+    margin: 10px;
+    color: #ffffff;
+    text-decoration: none;
+}
+
+.parent:hover > ul {
+    display:block;
+    position:absolute;
+}
+
+.child {
+    display: none;
+}
+
+.child li {
+    background-color: #ffffff;
+    line-height: 30px;
+    width: 130%;
+    margin: 0 auto;
+    padding: 5px;
+    text-align: left;
+    transition: .8s ease;
+}
+
+.child a{
+    color: #000000;
+    list-style: none;
+    margin: 0;
+    padding: 0px;
+    min-width:6em;
+}
+
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0px;
+    min-width:6em;
+ }
+
+ul ul {
+    left: 100%;
+    top: 0;
+}
+
+ul ul ul {
+    left: 100%;
+    top: 0;
+    margin-left:1px;
+}
+
+li:hover {
+    background-color: #838383;
+}
+
+.parent li:hover {
+    background-color: #cfcfcf;
+}
+
+.expand{
+    font-size:15px;
+    float:right;
+    margin-right:5px;
 }
 
 .recipe-name {
     font-size: 25px;
     font-weight: bold;
     text-decoration: underline;
+    margin-top: 0px;
 }
 
 .container {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
+    align-items: center;
     flex-wrap: wrap;
+    margin-top: 10px;
+    background-image: url("../images/chef2.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 500px, auto, contain;
+    gap: 500px;
 }
 
-.column-1 {
-    display: flex;
-    flex-flow: column;
-    margin-left: 50px;
-    margin-right: 20px;
-    width: 500px;
-    max-width: 100%;
-}
-
+.column-1,
 .column-2 {
     display: flex;
     flex-flow: column;
-    margin-left: 20px;
-    margin-right: 50px;
     width: 500px;
     max-width: 100%;
-}
-
-.center-column {
-    display: flex;
-    flex-flow: column;
-    align-items: center;
-    justify-content: center;
-    padding: 0%;
-    margin-bottom: 10px;
-    object-fit: contain;
-    min-width: 0;
-    min-height: 0;
-}
-
-.center-item {
-    width: 100%;
-}
-
-.center-column-image {
-    width: 500px;
-    height: auto;
 }
 
 .item-1,
@@ -95,6 +180,11 @@ h2 {
     position: relative;
     overflow: hidden;
     width: 500px;
+}
+
+.item-2,
+.item-4 {
+    margin-top: 50px;
 }
 
 .gallery_img {
@@ -125,7 +215,7 @@ h2 {
     transition: .5s ease;
     opacity: 0;
     position: absolute;
-    top: 40%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
@@ -138,6 +228,8 @@ h2 {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 20px;
+    border-radius: 25px;
 }
 
 .recipe-title {
@@ -149,11 +241,11 @@ h2 {
 }
 
 #recipe-container {
-    background-color: #f3f7ff;
+    background-color: #ffffff;
     display: block;
     margin: auto;
     text-align: left;
-    border: 4px #d4e2ff solid;
+    border: 4px grey solid;
     border-radius: 25px;
     width: max(65%,400px);
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.479);
@@ -165,6 +257,7 @@ h2 {
     border: none;
     color: #ffffff;
     font-family: Nunito;
+    font-size: 16px;
     font-weight: bold;
     padding: 10px 20px;
     text-align: center;
@@ -175,6 +268,8 @@ h2 {
     border-radius: 16px;
     opacity: 0.7;
     transition: 0.3s;
+    position: fixed;
+    z-index: 1;
 }
 
 .back-button:hover {
