--- a/css/styles.css
+++ b/css/styles.css
@@ -78,6 +78,7 @@ footer {
     z-index: 1;
     padding: 5px;
     transition: .8s ease;
+    border-radius: 16px;
 }
 
 .parent a {
@@ -103,6 +104,7 @@ footer {
     padding: 5px;
     text-align: left;
     transition: .8s ease;
+    border-radius: 16px;
 }
 
 .child a{
@@ -110,14 +112,14 @@ footer {
     list-style: none;
     margin: 0;
     padding: 0px;
-    min-width:6em;
+    min-width: 6em;
 }
 
 ul {
     list-style: none;
     margin: 0;
     padding: 0px;
-    min-width:6em;
+    min-width: 6em;
  }
 
 ul ul {
