--- a/css/styles.css
+++ b/css/styles.css
@@ -100,7 +100,7 @@ footer {
     background-color: #ffffff;
     line-height: 30px;
     width: 130%;
-    margin: 0 auto;
+    margin: 0;
     padding: 5px;
     text-align: left;
     transition: .8s ease;
@@ -115,25 +115,24 @@ footer {
     min-width: 6em;
 }
 
-ul {
-    list-style: none;
+.menu {
     margin: 0;
     padding: 0px;
-    min-width: 6em;
- }
+    min-width: 5em;
+}
 
 ul ul {
-    left: 100%;
+    left: 50%;
     top: 0;
 }
 
 ul ul ul {
-    left: 100%;
+    left: 65%;
     top: 0;
-    margin-left:1px;
+    min-width: 6em;
 }
 
-li:hover {
+.menu li:hover {
     background-color: #838383;
 }
 
