--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,14 @@ footer {
     align-items: center;
 }
 
+.icons div {
+        transition: all .5s ease-in-out;
+}
+
+.icons div:hover {
+    transform: rotate(360deg) scale(1.5);
+}
+
 .icons .icon:link, .icons .icon:visited {
     color: #1f1f1f;
     text-decoration: none;
