--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,8 @@ footer {
 
 .icons {
     display: flex;
-    position: fixed;
+    padding-top: 250px;
+    padding-bottom: 50px;
     overflow: hidden;
     width: 100%;
     height: 100%;
